--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }} | <span class="disqus-comment-count" data-disqus-identifier="{{ post.url }}"></span></span>
+  <span class="post-date">{{ page.date | date_to_string }} | <span class="disqus-comment-count" data-disqus-identifier="{{ page.url }}"></span></span>
   {{ content }}
 </div>
 
